file(GLOB INCLUDE_ ../../../include/yield/fs/*.hpp)
file(GLOB SRC *.cpp *.hpp)
file(GLOB SRC_POSIX posix/*.cpp posix/*.hpp)
file(GLOB SRC_WIN32 win32/*.cpp win32/*.hpp)
if (WIN32)
	set_source_files_properties(${SRC_POSIX} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\posix" FILES ${SRC_POSIX})
	source_group("Source Files\\win32" FILES ${SRC_WIN32})
	add_library(yield.fs STATIC ${INCLUDE_} ${SRC} ${SRC_POSIX} ${SRC_WIN32})
else()
	add_library(yield.fs STATIC ${SRC} ${SRC_POSIX})
endif()
target_link_libraries(yield.fs yield.i18n)

add_subdirectory(poll)