file(GLOB INCLUDE_ ../../../include/yield/poll/*.hpp)
file(GLOB SRC *.cpp *.hpp)
file(GLOB SRC_BSD bsd/*.cpp bsd/*.hpp)
file(GLOB SRC_LINUX linux/*.cpp linux/*.hpp)
file(GLOB SRC_POSIX posix/*.cpp posix/*.hpp)
file(GLOB SRC_SUNOS sunos/*.cpp sunos/*.hpp)
file(GLOB SRC_WIN32 win32/*.cpp win32/*.hpp)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin" OR ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
	add_library(yield.poll STATIC ${SRC} ${SRC_BSD} ${SRC_POSIX})
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	add_library(yield.poll STATIC ${SRC} ${SRC_LINUX} ${SRC_POSIX})
elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
	add_library(yield.poll STATIC ${SRC} ${SRC_POSIX} ${SRC_SUNOS})
elseif (WIN32)
	set_source_files_properties(${SRC_BSD} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\bsd" FILES ${SRC_BSD})
	set_source_files_properties(${SRC_LINUX} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\linux" FILES ${SRC_LINUX})
	set_source_files_properties(${SRC_POSIX} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\posix" FILES ${SRC_POSIX})
	set_source_files_properties(${SRC_SUNOS} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\sunos" FILES ${SRC_SUNOS})
	source_group("Source Files\\win32" FILES ${SRC_WIN32})
	add_library(yield.poll STATIC ${INCLUDE_} ${SRC} ${SRC_BSD} ${SRC_LINUX} ${SRC_POSIX} ${SRC_SUNOS} ${SRC_WIN32})
endif()
target_link_libraries(yield.poll yield.thread)
