file(GLOB INCLUDE_ ../../../include/yield/sockets/*.hpp)
file(GLOB SRC *.cpp *.hpp)
file(GLOB SRC_POSIX posix/*.cpp posix/*.hpp)
file(GLOB SRC_WIN32 win32/*.cpp win32/*.hpp)
if (WIN32)
	set_source_files_properties(${SRC_POSIX} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\posix" FILES ${SRC_POSIX})
	source_group("Source Files\\win32" FILES ${SRC_WIN32})
	add_library(yield.sockets STATIC ${INCLUDE_} ${SRC} ${SRC_POSIX} ${SRC_WIN32})
else()
	add_library(yield.sockets STATIC ${SRC} ${SRC_POSIX})
endif()
target_link_libraries(yield.sockets yield)
if (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
	target_link_libraries(yield.sockets nsl socket)
endif()

add_subdirectory(aio)