file(GLOB INCLUDE_ ../../../../include/yield/fs/poll/*.hpp)
file(GLOB SRC *.cpp)
file(GLOB SRC_HPP *.hpp)
file(GLOB SRC_BSD bsd/*.cpp bsd/*.hpp)
file(GLOB SRC_LINUX linux/*.cpp linux/*.hpp)
file(GLOB SRC_WIN32 win32/*.cpp win32/*.hpp)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin" OR ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
	add_library(yield.fs.poll STATIC ${SRC} ${SRC_BSD})
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	add_library(yield.fs.poll STATIC ${SRC} ${SRC_LINUX})
elseif (WIN32)
	source_group("Source Files" FILES ${SRC_HPP})
	set_source_files_properties(${SRC_BSD} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\bsd" FILES ${SRC_BSD})
	set_source_files_properties(${SRC_LINUX} PROPERTIES HEADER_FILE_ONLY true)
	source_group("Source Files\\linux" FILES ${SRC_LINUX})
	source_group("Source Files\\win32" FILES ${SRC_WIN32})
	add_library(yield.fs.poll STATIC ${INCLUDE_} ${SRC} ${SRC_HPP} ${SRC_BSD} ${SRC_LINUX} ${SRC_WIN32})
endif()
target_link_libraries(yield.fs.poll yield.fs yield.poll)
