file(GLOB INCLUDE_ ${CMAKE_SOURCE_DIR}/include/yield/sockets/aio/*.hpp)
file(GLOB SRC *.cpp *.hpp)
file(GLOB SRC_WIN32 win32/*.cpp win32/*.hpp)
if (WIN32)
	source_group("Source Files\\win32" FILES ${SRC_WIN32})
	add_library(yield.sockets.aio STATIC ${INCLUDE_} ${INCLUDE_WIN32} ${SRC} ${SRC_WIN32})
else()
	add_library(yield.sockets.aio STATIC ${SRC})
endif()
target_link_libraries(yield.sockets.aio yield.poll yield.sockets)
